--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://bpamo2mjahwppkihptvb-mysql.services.clever-cloud.com:3306/bpamo2mjahwppkihptvb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=u3f23xazlasuslcq
 spring.datasource.password=l9MGGqEJEZjJVV2cFxqe
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8DialectctSQL8Dialect
