--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 HELP.md
 ##target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+##!.mvn/wrapper/maven-wrapper.jar
+##!**/src/main/**/target/
+##!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -26,7 +26,7 @@ HELP.md
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
+##!**/src/main/**/build/
 !**/src/test/**/build/
 
 ### VS Code ###
